[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Sreekar <sreekargv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.3.32"
langgraph = "^0.6.6"
langchain = "^0.3.27"
dotenv = "^0.9.9"
streamlit = "^1.49.0"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
